Cleaning up logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles/locations-style.css" />
   </head>
   <body>
-    <div class="locations">
+    <div class="locations-section">
       <div class="locations__main">
         <div class="locations__title">
           <h2>Our Care Network</h2>
@@ -104,7 +104,7 @@
             </div>
             <div class="locations-menu__content is-collapsed" aria-hidden="true">
               <div class="locations-menu__info">
-                When your condition can't wait – like a bad cough or a sprained knee – Jefferson Health Urgent Care is your best option. 
+                When your condition can't wait – like a bad cough or a sprained knee – Jefferson Health Urgent Care is your best option.
                 <div class="locations-menu__list-heading">
                   Select below to view Location Details
                 </div>
