Added custom info window

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         </div>
         <div class="locations__map">
           <div id="map"></div>
+          <div class="locations-info-window__wrapper is-hidden">
+            <div class="locations-info-window__title-bar">
+              <div class="locations-info-window__title-name">Urgent Care</div>
+              <div class="locations-info-window__close">&#x2716;</div>
+            </div>
+            <div class="locations-info-window"></div>
+          </div>
         </div>
       </div>
       <div class="locations__sidebar">
