Adjustments and prep for live

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </div>
         <div class="locations__map">
           <div id="map"></div>
-          <div class="locations-info-window__wrapper is-hidden">
+          <div class="locations-info-window__wrapper locations-info-window__wrapper--default is-hidden">
             <div class="locations-info-window__title-bar">
-              <div class="locations-info-window__title-name">Urgent Care</div>
-              <div class="locations-info-window__close">&#x2716;</div>
+              <div class="locations-info-window__title-bar-name"></div>
+              <div class="locations-info-window__close"></div>
             </div>
             <div class="locations-info-window"></div>
           </div>
